# python-uv-template

./: LICENSE  README.md  justfile  pyproject.toml  pyrightconfig.json
_package/: entrypoint.py
